[gd_scene load_steps=25 format=3 uid="uid://b40horegir4v2"]

[ext_resource type="Script" uid="uid://dghlbqs685ud0" path="res://scripts/zuck_stage_1.gd" id="1_dyxwv"]
[ext_resource type="Texture2D" uid="uid://cc4tam23oxd8h" path="res://assets/rando/done/sprite_sheet_pahse_1_idle-removebg-preview.png" id="1_mxh0h"]
[ext_resource type="Texture2D" uid="uid://bpy76vjpqqslf" path="res://assets/rando/done/sprite_sheet_pahse_1_jumping-removebg-preview.png" id="3_onfay"]
[ext_resource type="Texture2D" uid="uid://dppky7tsh01du" path="res://assets/rando/done/zuck_fighting-removebg-preview.png" id="3_thiek"]
[ext_resource type="Texture2D" uid="uid://6uoirj4eexrn" path="res://assets/rando/done/sprite_sheet_pahse_1_walking-removebg-preview.png" id="4_thiek"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dyxwv"]
atlas = ExtResource("1_mxh0h")
region = Rect2(0, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_knhmb"]
atlas = ExtResource("1_mxh0h")
region = Rect2(250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_onfay"]
atlas = ExtResource("1_mxh0h")
region = Rect2(0, 250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_thiek"]
atlas = ExtResource("1_mxh0h")
region = Rect2(250, 250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pwfu"]
atlas = ExtResource("3_thiek")
region = Rect2(0, 250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_oo4jk"]
atlas = ExtResource("3_thiek")
region = Rect2(0, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_poyrr"]
atlas = ExtResource("3_thiek")
region = Rect2(250, 250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjdqp"]
atlas = ExtResource("3_thiek")
region = Rect2(250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3m0j"]
atlas = ExtResource("3_onfay")
region = Rect2(0, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lsjt"]
atlas = ExtResource("3_onfay")
region = Rect2(250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rr0j"]
atlas = ExtResource("3_onfay")
region = Rect2(0, 250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_br8in"]
atlas = ExtResource("3_onfay")
region = Rect2(250, 250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_pp2oa"]
atlas = ExtResource("4_thiek")
region = Rect2(0, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_6p0ec"]
atlas = ExtResource("4_thiek")
region = Rect2(250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_kes7w"]
atlas = ExtResource("4_thiek")
region = Rect2(0, 250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_t32qn"]
atlas = ExtResource("4_thiek")
region = Rect2(250, 250, 250, 250)

[sub_resource type="SpriteFrames" id="SpriteFrames_l3m0j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyxwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knhmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_onfay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thiek")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pwfu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oo4jk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_poyrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjdqp")
}],
"loop": true,
"name": &"fighting",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3m0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lsjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rr0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_br8in")
}],
"loop": true,
"name": &"jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pp2oa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6p0ec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kes7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t32qn")
}],
"loop": true,
"name": &"running",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_thiek"]
size = Vector2(91, 210)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l3m0j"]
size = Vector2(161.25, 138.75)

[node name="Zuck Stage 1" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_dyxwv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_l3m0j")
animation = &"fighting"

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-4.5, 3)
shape = SubResource("RectangleShape2D_thiek")

[node name="hit_range_left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_range_left"]
position = Vector2(-44, -4.375)
shape = SubResource("RectangleShape2D_l3m0j")

[node name="hit_range_right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_range_right"]
position = Vector2(73.375, -5)
shape = SubResource("RectangleShape2D_l3m0j")

[connection signal="body_entered" from="hit_range_left" to="." method="_on_hit_range_left_body_entered"]
[connection signal="body_exited" from="hit_range_left" to="." method="_on_hit_range_left_body_exited"]
[connection signal="body_entered" from="hit_range_right" to="." method="_on_hit_range_right_body_entered"]
[connection signal="body_exited" from="hit_range_right" to="." method="_on_hit_range_right_body_exited"]
